# eynollah

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README  README.md  build_model_load_pretrained_weights_and_save.py  config_params.json  custom_config_page2label.json  generate_gt_for_training.py  gt_for_enhancement_creator.py  gt_gen_utils.py  inference.py  make.sh  models.py  ocrd-tool.json  pagexml2label.py  pyproject.toml  pyproject.toml.txt  requirements-ocr.txt  requirements-test.txt  requirements-training.txt  requirements.txt  run_image_extraction_over_ppn_lists.py  setup.py  train.py  train_no_patches_448x448.json  utils.py
.circleci/: config.yml
.github/workflows/: build-docker.yml  pypi.yml  test-eynollah.yml
docs/: docker.md  examples.md  eynollah-layout.md  models.md  ocrd.md  train.md  train_wiki.md  usage.md
eynollah/eynollah/: cli.py  eynollah.py
eynollah/eynollah/utils/: contour.py
qurator/eynollah/: cli.py  eynollah.py  ocrd-tool.json  ocrd_cli.py  plot.py  processor.py  writer.py
qurator/eynollah/utils/: __init__.py  contour.py  counter.py  drop_capitals.py  is_nan.py  marginals.py  pil_cv2.py  rotate.py  separate_lines.py  xml.py
sbb_newspapers_org_image/: __init__.py  cli.py  eynollah.py  plot.py  unused.py  utils.py  writer.py
sbb_newspapers_org_image/utils/: __init__.py  contour.py  drop_capitals.py  resize.py  rotate.py  separate_lines.py  xml.py
src/eynollah/: binarize.py  cli.py  cli_models.py  extract_images.py  eynollah.py  eynollah_imports.py  eynollah_ocr.py  image_enhancer.py  mb_ro_on_layout.py  model_zoo.py  ocrd-tool-binarization.json  ocrd-tool.json  ocrd_cli.py  ocrd_cli_binarization.py  ocrd_cli_recognize.py  ocrd_cli_segment.py  patch_encoder.py  plot.py  predictor.py  processor.py  sbb_binarize.py  writer.py
src/eynollah/cli/: __init__.py  cli.py  cli_binarize.py  cli_enhance.py  cli_extract_images.py  cli_layout.py  cli_ocr.py  cli_readingorder.py
src/eynollah/model_zoo/: .nfs00000002feddea7d00000031  __init__.py  default_specs.py  model_zoo.py  specs.py  types.py
src/eynollah/ocrd/: ocrd_cli_binarize.py  ocrd_cli_layout.py  processor_binarize.py  processor_layout.py  processor_ocr.py
src/eynollah/training/: build_model_load_pretrained_weights_and_save.py  cli.py  convert.py  extract_line_gt.py  generate_gt_for_training.py  generate_or_update_cnn_rnn_ocr_character_list.py  gt_gen_utils.py  inference.py  metrics.py  models.py  reload-models-v0.8.mk  train.py  utils.py  weights_ensembling.py
src/eynollah/utils/: __init__.py  contour.py  counter.py  drop_capitals.py  font.py  marginals.py  pil_cv2.py  resize.py  rotate.py  separate_lines.py  shm.py  utils_ocr.py  xml.py
tests/: base.py  conftest.py  test_counter.py  test_dpi.py  test_model_zoo.py  test_run.py  test_run_layout.py  test_smoke.py  test_xml.py
tests/cli_tests/: conftest.py  test_binarization.py  test_enhance.py  test_layout.py  test_mbreorder.py  test_ocr.py  test_run.py
tests/resources/2files/: euler_rechenkunst01_1738_0025.xml  kant_aufklaerung_1784_0020.tif  kant_aufklaerung_1784_0020.xml
tests/resources/marginalia/: estor_rechtsgelehrsamkeit02_1758_0880_800px.xml
train/: Dockerfile  README.md  config_params.json  config_params_docker.json  custom_config_page2label.json  generate_gt_for_training.py  gt_gen_utils.py  inference.py  metrics.py  models.py  pagexml2label.py  requirements.txt  scales_enhancement.json  train.md  train.py  utils.py
